@@ -175,17 +175,17 @@
   </define>
   <define name="attlist.label" combine="interleave">
     <optional>
-      <attribute name="align" a:defaultValue="0.0"/>
+      <attribute name="xalign" a:defaultValue="0.0"/>
     </optional>
   </define>
   <define name="attlist.label" combine="interleave">
     <optional>
-      <attribute name="xalign" a:defaultValue="0.5"/>
+      <attribute name="yalign" a:defaultValue="0.5"/>
     </optional>
   </define>
   <define name="attlist.label" combine="interleave">
     <optional>
-      <attribute name="expand" a:defaultValue="0">
+      <attribute name="yexpand" a:defaultValue="0">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -195,7 +195,7 @@
   </define>
   <define name="attlist.label" combine="interleave">
     <optional>
-      <attribute name="fill" a:defaultValue="0">
+      <attribute name="yfill" a:defaultValue="0">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -286,7 +286,7 @@
   </define>
   <define name="attlist.field" combine="interleave">
     <optional>
-      <attribute name="expand">
+      <attribute name="yexpand">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -296,7 +296,7 @@
   </define>
   <define name="attlist.field" combine="interleave">
     <optional>
-      <attribute name="fill">
+      <attribute name="yfill">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -332,6 +332,16 @@
           <value>1</value>
         </choice>
       </attribute>
+    </optional>
+  </define>
+  <define name="attlist.field" combine="interleave">
+    <optional>
+      <attribute name="xalign" a:defaultValue="0.0"/>
+    </optional>
+  </define>
+  <define name="attlist.field" combine="interleave">
+    <optional>
+      <attribute name="yalign" a:defaultValue="0.5"/>
     </optional>
   </define>
   <define name="attlist.field" combine="interleave">
@@ -473,7 +483,7 @@
   </define>
   <define name="attlist.image" combine="interleave">
     <optional>
-      <attribute name="expand" a:defaultValue="0">
+      <attribute name="yexpand" a:defaultValue="0">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -483,7 +493,7 @@
   </define>
   <define name="attlist.image" combine="interleave">
     <optional>
-      <attribute name="fill" a:defaultValue="0">
+      <attribute name="yfill" a:defaultValue="0">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -525,7 +535,7 @@
   </define>
   <define name="attlist.separator" combine="interleave">
     <optional>
-      <attribute name="align" a:defaultValue="0.0"/>
+      <attribute name="xalign" a:defaultValue="0.0"/>
     </optional>
   </define>
   <define name="attlist.separator" combine="interleave">
@@ -535,7 +545,7 @@
   </define>
   <define name="attlist.separator" combine="interleave">
     <optional>
-      <attribute name="expand" a:defaultValue="0">
+      <attribute name="yexpand" a:defaultValue="0">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -545,7 +555,7 @@
   </define>
   <define name="attlist.separator" combine="interleave">
     <optional>
-      <attribute name="fill" a:defaultValue="0">
+      <attribute name="yfill" a:defaultValue="0">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -723,7 +733,7 @@
   </define>
   <define name="attlist.group" combine="interleave">
     <optional>
-      <attribute name="expand" a:defaultValue="0">
+      <attribute name="yexpand" a:defaultValue="0">
         <choice>
           <value>0</value>
           <value>1</value>
@@ -733,7 +743,7 @@
   </define>
   <define name="attlist.group" combine="interleave">
     <optional>
-      <attribute name="fill" a:defaultValue="1">
+      <attribute name="yfill" a:defaultValue="1">
         <choice>
           <value>0</value>
           <value>1</value>
